[package]
name = "analysis"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
graphics = ["plotters", "image"]

[dependencies]
serde-pickle = "1.1.1"
plotters = { version = "0.3.5", optional = true }
image = { version = "0.24.8", optional = true }
wows-replays = { path = "../parser" }
