[package]
name = "wows-replays"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
hexdump = "0.1.1"
flate2 = "1.0.28"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.57"
roxmltree = "0.14.1"
serde-pickle = "1.1.1"
rust-embed = "6.8.1"
modular-bitfield = "0.11.2"
bitreader = "0.3.8"
blowfish = "0.9.1"
cipher = "0.4.4"
